# kiwi

./: .env  .gitignore  Cargo.toml  README.md
migrations/: like.sql  message.sql  user.sql
src/: config.rs  error.rs  lib.rs  likes.rs  main.rs  messages.rs
src/like/: likes.rs  mod.rs  routes.rs
src/message/: messages.rs  routes.rs
src/router/: extractor.rs  mod.rs  server.rs
src/user/: mod.rs  routes.rs  users.rs
